Bug 573268 - The XPTI rewrite caused an (intentional) leak at shutdown; free this data only in trace-malloc builds so that leakstats are still useful. r=dbaron